@@ -24,6 +24,7 @@
     * 4079 FIX: Improved error handling in case a WATO folder can not be written
     * 4082 FIX: Icon selector: Fixed exception in case non images are saved in icon folder
     * 4084 FIX: Improved error handling in case of broken hosts.mk files
+    * 4130 FIX: Improved error handling when trying to edit not existant rules
 
 
 1.4.0i2p4:
